# feature-modelling

./: .gitignore  feature-modeling.cabal
src/FeatureModel/: Main.lhs  Types.lhs
src/FeatureModel/Parsers/: GenericParser.hs
src/FeatureModel/Parsers/FMGrammar/: LexFMGrammar.x
src/FeatureModel/Parsers/FMIde/: LexFMIde.x
src/FeatureModel/Parsers/FMPlugin/: XmlFeatureModel.lhs
src/FeatureModel/Parsers/FeatureIDE/: LexFeatureIDE.x
